Background stretch fix

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+
 }
 
 .mastheadmain {
@@ -20,7 +21,7 @@ body {
 video {
   width: 100vw;
   height: 100vh;
-  object-fit: fill;
+  object-fit: cover;
   position: fixed;
   left: 0;
   right: 0;
